--- a/cookBook/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/cookBook/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive"
+    style="max-height: 200px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -23,7 +24,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-      <h4>Description</h4>
+      <h4>{{recipe.description}}</h4>
     </div>
   </div>
   <div class="row">
