--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -6,15 +6,31 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item"
-          *ngFor="let number of numbers">
-          {{number}}
-        </li>
+        <div *ngIf="onlyOdd">
+            <li
+            class="list-group-item"
+            [ngClass]="{odd: odd % 2 !==0}"
+            *ngFor="let odd of oddNum">
+            {{odd}}
+          </li>
+        </div>
+        <div *ngIf="!onlyOdd">
+            <li
+            class="list-group-item"
+            [ngClass]="{odd: even % 2 !==0}"
+            *ngFor="let even of evenNum">
+            {{even}}
+          </li>
+        </div>
       </ul>
-      <ng-template [ngIf]="onlyOdd">
+
+      <p appBasicHighlight>Hover me pls</p>
+      <p appBetterHighlight [highlightColor]="'yellow'">Hover me pls</p>
+
+
+      <!-- <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
-      </ng-template>
+      </ng-template> -->
     </div>
   </div>
 </div>
